o add polygon mirror mount.

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -1,8 +1,6 @@
-ALL_DXF=laser-rot-mount.dxf motor-mount.dxf side-mount.dxf side-mount2.dxf
+ALL_DXF=laser-rot-mount.dxf motor-mount.dxf side-mount.dxf side-mount2.dxf rot-mirror-mount.dxf
 
 all : $(ALL_DXF)
-
-laser-rot-mount.dxf:
 
 %.dxf: %.ps
 	pstoedit -psarg "-r600x600" -dt -f "dxf_s:-mm -ctl" $< $@
