o Add work-in-progress first version of laser-cut case.

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -1,9 +1,9 @@
-ALL_TARGETS=laser-rot-mount.dxf motor-mount.dxf side-mount.dxf side-mount2.dxf rot-mirror-mount.dxf sled.dxf spacers.dxf acme-square-nut-mold.stl
+ALL_TARGETS=laser-cut-case.dxf
 
 all : $(ALL_TARGETS)
 
 %.dxf: %.ps
-	pstoedit -psarg "-r600x600" -dt -f "dxf_s:-mm -ctl" $< $@
+	pstoedit -psarg "-r600x600" -mergetext -dt -f "dxf_s:-mm -ctl" $< $@
 
 %.stl: %.scad
 	openscad -o $@ -d $@.deps $<
