--- a/device-tree/LDGraphy.dts
+++ b/device-tree/LDGraphy.dts
@@ -31,8 +31,9 @@
 		    /* Pixel data */
 		    0x158 0x07 /* GPIO0[4] ; P9.18 Polygon Mirror Clock */
 		    0x15c 0x07 /* GPIO0[5] ; P9.17 Laser Data */
+		    0x074 0x17 /* GPIO0[31], P9.13 Motor Enable; pullup */
 
-		    /* Stepmotor data */
+		    /* Stepmotor data. Not yet used. */
 		    0x040 0x07 /* GPIO1[16]; P9.15 Dir */
 		    0x044 0x07 /* GPIO1[17]; P9.23 Enable */
 		    0x048 0x07 /* GPIO1[18]; P9.14 Step */
