o Add a script to create pnm from PostScript. (the pnmtools' pstopnm   doesn't deal with the bounding box).

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -5,6 +5,9 @@ all : $(ALL_TARGETS)
 %.dxf: %.ps
 	pstoedit -psarg "-r600x600" -mergetext -dt -f "dxf_s:-mm -ctl" $< $@
 
+%.png : %.ps
+	../scripts/ps2pnm 60 $< | pnmtopng > $@
+
 %.stl: %.scad
 	openscad -o $@ -d $@.deps $<
 
