--- a/device-tree/LDGraphy.dts
+++ b/device-tree/LDGraphy.dts
@@ -29,14 +29,20 @@
             beagleg_gpio_pins: LDGraphy_Pins {
                 pinctrl-single,pins = <
 		    /* Pixel data */
-		    0x158 0x07 /* GPIO0[4] ; P9.18 Polygon Mirror Clock */
-		    0x15c 0x07 /* GPIO0[5] ; P9.17 Laser Data */
-		    0x074 0x17 /* GPIO0[31], P9.13 Motor Enable; pullup */
+		    0x158 0x07 /* GPIO_0[4] ; P9.18 Polygon Mirror Clock */
+		    0x15c 0x07 /* GPIO_0[5] ; P9.17 Laser Data */
+		    0x074 0x17 /* GPIO_0[31]; P9.13 Motor Enable; pullup */
+
+		    /* Input */
+		    /* Not sure if slow slew means what I think it means: assuming that
+		       it enables a SchmittTrigger at the GPIO input.
+		       (Output of our OpAmp is slow, only 10V/us */
+		    0x070 0x77 /* GPIO_0[30]; P9.11 Hsync input. Pullup. Slow Slew */
 
 		    /* Stepmotor data. Not yet used. */
-		    0x040 0x07 /* GPIO1[16]; P9.15 Dir */
-		    0x044 0x07 /* GPIO1[17]; P9.23 Enable */
-		    0x048 0x07 /* GPIO1[18]; P9.14 Step */
+		    0x040 0x07 /* GPIO_1[16]; P9.15 Dir */
+		    0x044 0x07 /* GPIO_1[17]; P9.23 Enable */
+		    0x048 0x07 /* GPIO_1[18]; P9.14 Step */
                 >;
             };
         };
