o Use PNG library directly - it is much faster getting the pixels   out of it than with ImageMagick

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,9 +16,6 @@ PASM=$(AM335_BASE)/pru_sw/utils/pasm
 LIBDIR_APP_LOADER?=$(AM335_BASE)/pru_sw/app_loader/lib
 INCDIR_APP_LOADER?=$(AM335_BASE)/pru_sw/app_loader/include
 
-MAGICK_CXXFLAGS=`GraphicsMagick++-config --cppflags --cxxflags`
-MAGICK_LDFLAGS=`GraphicsMagick++-config --ldflags --libs`
-
 # Optmization flags. Typically, that should be -O3 for regluar use, but for
 # debugging and development "-g -O0" can be more helpful. Overridable by
 # environment variable.
@@ -29,10 +26,10 @@ CFLAGS+=-Wall -Wno-unused-function -I$(INCDIR_APP_LOADER) -D_XOPEN_SOURCE=500 $(
 # We use c++11, but it looks like that even the latest
 # bone-debian-7.11-lxde-4gb-armhf-2016-06-16-4gb image has an ancient 4.6.3
 # compiler that still referred to that standard as c++0x
-export CXXFLAGS+=-std=c++0x $(CFLAGS) $(MAGICK_CXXFLAGS)
+export CXXFLAGS+=-std=c++0x $(CFLAGS)
 export CXX?=g++
 
-LDFLAGS+=-lpthread -lm $(MAGICK_LDFLAGS)
+LDFLAGS+=-lpthread -lm -lpng
 PRUSS_LIBS=$(LIBDIR_APP_LOADER)/libprussdrv.a
 
 # Assembled binary from *.p file.
