Use as low as possible laser modulation while mirror is still smoothly turning.
o Looks like some states in the state machine take longer than planned,
  partially due to the crazy overhead trying to get a CPU cycle out of
  the PRU. Choose large enough number that everything fits in alotted
  slot (TODO: hunt down cpu-waster. The bit-loop is known to be too
  wasteful).
o Lower laser frequency means possibly higher definition depening on how
  fast the laser switches the photon output.
o There is a lower limit: the mirror starts to get jerky when driven
  too slow.

--- a/src/Makefile
+++ b/src/Makefile
@@ -50,7 +50,7 @@ ldgraphy: main.o $(OBJECTS)
 	$(CROSS_COMPILE)$(CXX) $(CXXFLAGS) -c  $< -o $@
 	@$(CROSS_COMPILE)$(CXX) $(CXXFLAGS) -MM $< > $@.d
 
-%_bin.h : %.p $(PASM)
+%_bin.h : %.p laser-scribe-constants.h $(PASM)
 	$(PASM) -I$(CAPE_INCLUDE) -V3 -c $<
 
 $(PASM):
