Test image: resolution of scan line.
o Mirror jitter matters and can make a line get worse over its
  progress. Also focus of course. This test image helps to
  test that.

--- a/img/Makefile
+++ b/img/Makefile
@@ -1,6 +1,6 @@
 # Make the resolution beyond 4x the device resolution to prevent aliasing
 # issues.
-all : test-pattern-3000dpi.png resolution-snake-3000dpi.png line-resolution-test-3000dpi.png
+all : test-pattern-3000dpi.png resolution-snake-3000dpi.png line-resolution-test-3000dpi.png scan-line-resolution-3000dpi.png
 
 %-3000dpi.png: %.ps
 	../scripts/ps2bwpng 3000 $< > $@
