Adapt to pstoedit 3.71

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -3,7 +3,7 @@ ALL_TARGETS=laser-cut-case.dxf
 all : $(ALL_TARGETS)
 
 %.dxf: %.ps
-	pstoedit -psarg "-r600x600" -mergetext -dt -f "dxf_s:-mm -ctl" $< $@
+	pstoedit -psarg "-r600x600" -nb -mergetext -dt -f "dxf_s:-mm -ctl" $< $@
 
 %.png : %.ps
 	../scripts/ps2pnm 240 $< | pnmscale 0.25 | pnmtopng > $@
